--- a/my-portfolio-react/package.json
+++ b/my-portfolio-react/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "my-portfolio-react",
-  "version": "0.1.0",
+  "name": "portfolio",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@fontsource/akaya-telivigala": "^4.5.8",
+    "@fontsource/sora": "^4.5.10",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.2",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
-    "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "gsap": "^3.9.1",
+    "normalize.css": "^8.0.1",
+    "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "react-use": "^17.3.2",
+    "styled-components": "^5.3.6",
+    "swiper": "^8.0.6",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
